[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.windows]
version = "0.52.0"
features = [
    "System",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]
